--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -13,6 +13,32 @@ theme = "LoveIt"
   # LoveIt theme version
   version = "0.2.X"
 
+  [params.social]
+    GitHub = "garyljackson"
+    Linkedin = "garyljackson"
+
+  [params.home]
+    [params.home.profile]
+      enable = true
+      # URL of avatar shown in home page
+      avatarURL = "/images/avatar.png"
+      # LoveIt CHANGED | 0.2.7 title shown in home page (HTML format is supported)
+      title = ""
+      # subtitle shown in home page
+      subtitle = "Hello, welcome to my blog"
+      # whether to use typeit animation for subtitle
+      typeit = true
+      # whether to show social links
+      social = true
+    # Home page posts
+    [params.home.posts]
+      enable = true
+      # special amount of posts in each home posts page
+      paginate = 6
+      defaultHiddenFromHomePage = false
+
+
+
 [menu]
   [[menu.main]]
     identifier = "posts"
