--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: 'latest'
-        
+
+    - name: Run a one-line script
+      run: ls
+              
     - name: Build
       run: hugo --minify
