--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,11 @@ jobs:
       with:
         hugo-version: 'latest'
 
-    - name: Run a one-line script
-      run: ls
-              
     - name: Build
       run: hugo --minify --source hugo
+
+    - name: Deploy build to static site (Azure storage blob)
+      run: hugo deploy --maxDeletes -1
+      env:
+        AZURE_STORAGE_ACCOUNT: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
+        AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
