--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       run: hugo --minify --source hugo
 
     - name: Deploy build to static site (Azure storage blob)
-      run: hugo deploy --maxDeletes -1
+      run: hugo deploy --maxDeletes -1 --source hugo
       env:
         AZURE_STORAGE_ACCOUNT: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
         AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
