Add Azure CDN Purge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,15 @@ jobs:
       env:
         AZURE_STORAGE_ACCOUNT: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
         AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
+    
+    - name: Azure Login
+      uses: Azure/login@v1.1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Purge CDN
+      run: az cdn endpoint purge -n ${{ secrets.AZURE_CDN_ENDPOINT_NAME }} --profile-name ${{ secrets.AZURE_CDN_PROFILE_NAME }} --content-paths "/*" --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --no-wait
+        
+    - name: Azure logout
+      run: az logout
+    
