Include uppercase images in deployment matches

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -109,7 +109,7 @@ theme = "LoveIt"
     gzip = true
 
   [[deployment.matchers]]
-    pattern = "^.+\\.(png|jpg)$"
+    pattern = "^.+\\.(png|PNG|jpg|JPG)$"
     cacheControl = "max-age=31536000, no-transform, public"
     gzip = false
 
